--- a/src/Components/HeaderComponent/navbar.css
+++ b/src/Components/HeaderComponent/navbar.css
@@ -1,1 +1,20 @@
-
+.navbarContainer{
+    display:grid;
+    place-items: center;
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:99;
+}
+.navbarList{
+    height:100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position:relative;
+}
+.navbarItem{
+    display: flex;
+    gap:3rem;
+    align-items: center;
+}
