--- a/src/Containers/Aboutus.css
+++ b/src/Containers/Aboutus.css
@@ -1,11 +1,10 @@
 .aboutus{
     display: flex;
-    flex-direction: column;
-    justify-content: left;
+    flex-direction: row;
+    align-items: center;
     padding-left: 2rem;
     padding-right: 2rem;
-    padding-top: 200px;
-    padding-right: 400px
+    padding-top: 75px;
   }
 
   .title{
@@ -16,4 +15,14 @@
   .text{
     font-size: 1.5rem;
     text-align: left;
+  }
+
+  .right-Container {
+    justify-content: right;
+    align-items: right;
+  }
+  
+  .clara{
+      width: 40rem;
+      height: 35rem;
   }
