--- a/src/Containers/mainContainer.css
+++ b/src/Containers/mainContainer.css
@@ -1,32 +1,18 @@
 .mainContainer {
   z-index: 99;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  text-align: center;
   padding-left: 2rem;
   padding-right: 2rem;
   padding-top: 75px;
 }
 
-.left-Container,
-.right-Container {
-  display: flex;
-  flex-direction: row;
-}
-
 .left-Container {
+  z-index: 2;
   color: white;
-  font-size: 4rem;
-  justify-content: left;
-  padding-right: 250px;
+  font-size: 6rem;
+  justify-content: center;
 }
 
-.right-Container {
-  justify-content: right;
-  align-items: right;
-}
-
-.clara{
-    width: 40rem;
-    height: 35rem;
+.color{
+  color: #FEE492;
 }
