--- a/src/Pages/cuenta/login.css
+++ b/src/Pages/cuenta/login.css
@@ -1,39 +1,110 @@
 .login-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: center;
 }
 
 .title {
-    height: 10%;
-    width: 100%;
+  height: 10%;
+  width: 100%;
 }
 
 .title h1 {
-    font-size: 3.5rem;
+  font-size: 3.5rem;
 }
 
 .form-login-container {
-    height: 80%;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
+  height: 80%;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
 }
 
 .wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 50%;
+}
+
+form input {
+  width: 100%;
+  border-radius: 10px;
+  border: 2px white solid;
+  background: transparent;
+  margin-bottom: 15px;
+  margin-top: 20px;
+  font-size: 15px;
+  padding: 1rem;
+  color: var(--deep-marine);
+  font-family: Arial, Helvetica, sans-serif;
+  resize: none;
+}
+
+form label {
+  text-align: left;
+  color: white;
+  font-weight: 400;
+}
+
+.contra {
+  opacity: 0.9;
+  text-align: right;
+}
+
+.btn-submitt-login {
+  background-color: var(--amarillo);
+  height: 3rem;
+  width: 10rem;
+  border-radius: 0.5rem;
+  border: 3px white solid;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 4rem;
+  color: var(--morado-rey);
+}
+
+form ::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+@media (max-width: 767px) {
+  .login-container {
+    height: 100%;
+    width: 100%;
+  }
+
+  .title {
+    height: 10%;
+    width: 100%;
+  }
+
+  .title h1 {
+    font-size: 2.5rem;
+  }
+
+  .form-login-container {
+    height: 80%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
     height: 50%;
-}
+  }
 
-form input{
+  form input {
     width: 100%;
-    border-radius: 10px ;
-    border:2px white solid;
+    border-radius: 10px;
+    border: 2px white solid;
     background: transparent;
     margin-bottom: 15px;
     margin-top: 20px;
@@ -42,31 +113,32 @@ form input{
     color: var(--deep-marine);
     font-family: Arial, Helvetica, sans-serif;
     resize: none;
-}
+  }
 
-form label{
+  form label {
     text-align: left;
-    color:white;
+    color: white;
     font-weight: 400;
-}
+  }
 
-.contra{
+  .contra {
     opacity: 0.9;
     text-align: right;
-}
+  }
 
-.btn-submitt-login{
+  .btn-submitt-login {
     background-color: var(--amarillo);
-    height:3rem;
-    width:10rem;
+    height: 3rem;
+    width: 10rem;
     border-radius: 0.5rem;
     border: 3px white solid;
     font-size: 18px;
-    font-weight:600;
+    font-weight: 600;
     margin-top: 4rem;
     color: var(--morado-rey);
-}
+  }
 
-form ::placeholder{
-    color: rgba(255,255,255,0.7);
+  form ::placeholder {
+    color: rgba(255, 255, 255, 0.7);
+  }
 }
