--- a/src/Containers/Problem.css
+++ b/src/Containers/Problem.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .problem{
     padding-left: 2rem;
     padding-right: 2rem;
@@ -62,7 +61,7 @@
 .textn{
     font-size: 2.5rem;
     color: white;
-=======
+}
 .problem{
     padding-left: 2rem;
     padding-right: 2rem;
@@ -126,5 +125,4 @@
 .textn{
     font-size: 2rem;
     color: white;
->>>>>>> 7b3f2bce2e5e2d200ddc9b61e40b605cface98ec
 }
