--- a/src/Components/PersonalInfoComponent/PersonalInfoComponent.css
+++ b/src/Components/PersonalInfoComponent/PersonalInfoComponent.css
@@ -1,5 +1,31 @@
 .questions-container {
-    width: 100vh;
+    width: 100vw;
     height: 100vh;
     background-color: var(--morado-rey);
+    align-items: left;
+    padding: 10rem;
+}
+
+.bottomContainer button {
+    position: absolute;
+    top: 85%;
+    right: 25%;
+    background-color: var(--amarillo);
+    height: 4rem;
+    width: 10rem;
+    font-size: 20px;
+    border-radius: 8px;
+    font-weight: 600;
+    border: 3px solid black;
+}
+
+.topContainer h1 {
+    text-align: left;
+    width: 60%;
+
+}
+
+.mediumContainer input {
+    position: absolute;
+    left: 25%;
 }
