--- a/src/Components/HeaderComponent/navbar.css
+++ b/src/Components/HeaderComponent/navbar.css
@@ -36,13 +36,13 @@
  }
  
  .buttons-container button{
-     background-color: white;
+     border: 3px solid white;
+     background-color: transparent;
      height:2.5rem;
      width:8rem;
      border-radius: 0.5rem;
      font-size: 18px;
-     font-weight:600;
- 
+     font-weight:400;
      
  }
  
@@ -77,4 +77,5 @@
  
  .buttons-container button:hover{
      background-color: var(--amarillo);
+     color: var(--morado-rey);
  }
