--- a/src/Pages/bot/bot.css
+++ b/src/Pages/bot/bot.css
@@ -21,23 +21,26 @@
 }
 
 .start-btn{
-    height:4rem;
-    width:10rem;
+    height:5rem;
+    width:12rem;
     border-radius: 10px;
     border: 3px solid black;
-    font-size:20px;
+    font-size:22px;
     background-color: var(--amarillo);
+    font-weight: 600;
 }
 
 .stars1{
     position: absolute;
-    top:5%;
-    right:20%;
+    top:-2%;
+    right:28%;
+    rotate: -10deg;
 }
 .stars2{
     position: absolute;
-    top:5%;
-    left:20%;
+    top:-2%;
+    left:28%;
+    rotate: 10deg;
 }
 
 .stars1 img, .stars2 img{
