--- a/src/Pages/cuenta/login.css
+++ b/src/Pages/cuenta/login.css
@@ -3,16 +3,18 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  align-items: center;
+
 }
 
 .title {
   height: 10%;
   width: 100%;
+
 }
 
 .title h1 {
   font-size: 3.5rem;
+  text-align: center;
 }
 
 .form-login-container {
@@ -20,51 +22,54 @@
   width: 80%;
   display: flex;
   flex-direction: column;
+
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
   width: 100%;
   height: 50%;
 }
 
 form input {
-  width: 100%;
+  width: 70%;
   border-radius: 10px;
   border: 2px white solid;
   background: transparent;
-  margin-bottom: 15px;
+  margin-bottom: 2rem;
   margin-top: 20px;
-  font-size: 15px;
+  font-size: 20px;
   padding: 1rem;
-  color: var(--deep-marine);
-  font-family: Arial, Helvetica, sans-serif;
+  color: white;
   resize: none;
 }
 
 form label {
+  width: 70%;
   text-align: left;
   color: white;
   font-weight: 400;
+  font-size: 22px;
 }
 
 .contra {
-  opacity: 0.9;
+  opacity: 0.7;
   text-align: right;
 }
 
 .btn-submitt-login {
-  background-color: var(--amarillo);
-  height: 3rem;
-  width: 10rem;
-  border-radius: 0.5rem;
-  border: 3px white solid;
-  font-size: 18px;
-  font-weight: 600;
-  margin-top: 4rem;
+  width:15%;
+  height:45px;
+  margin-top: 3rem;
+  border-radius: 12px ;
+  border: solid white;
+  font-weight: bold;
+  font-size: 20px;
   color: var(--morado-rey);
+  background-color: var(--amarillo);
 }
 
 form ::placeholder {
