--- a/src/Containers/Problem.css
+++ b/src/Containers/Problem.css
@@ -1,128 +1,182 @@
-.problem{
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-top: 50px;
+.problem {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.titleP{
-    font-size: 6rem;
-    color: white;
-    text-align: left;
+.titleP {
+  font-size: 6rem;
+  color: white;
+  text-align: left;
 }
 
-.datos{
-    display: flex;
-    flex-direction: row;
-    gap: 200px;
-    justify-content: center;
-    padding-top: 75px;
+.datos {
+  display: flex;
+  flex-direction: row;
+  gap: 200px;
+  justify-content: center;
+  padding-top: 75px;
 }
 
-.primerdato{
-    display: flex;
+.primerdato {
+  display: flex;
+  flex-direction: column;
+}
+
+.porcentaje {
+  font-size: 7rem;
+  color: white;
+}
+
+.textp {
+  font-size: 3.5rem;
+  color: white;
+}
+
+.segundodato {
+  display: flex;
+  flex-direction: column;
+}
+
+.año {
+  font-size: 7rem;
+  color: white;
+}
+
+.texta {
+  font-size: 3.5rem;
+  color: white;
+}
+
+.tercerdato {
+  display: flex;
+  flex-direction: column;
+}
+
+.numero {
+  font-size: 7rem;
+  color: white;
+}
+
+.textn {
+  font-size: 2.5rem;
+  color: white;
+}
+.problem {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 30px;
+}
+
+.titleP {
+  font-size: 6rem;
+  color: white;
+  text-align: left;
+}
+
+.datos {
+  display: flex;
+  flex-direction: row;
+  gap: 200px;
+  justify-content: center;
+  padding-top: 75px;
+}
+
+.primerdato {
+  display: flex;
+  flex-direction: column;
+}
+
+.porcentaje {
+  font-size: 5.5rem;
+  color: white;
+}
+
+.textp {
+  font-size: 2rem;
+  color: white;
+}
+
+.segundodato {
+  display: flex;
+  flex-direction: column;
+}
+
+.año {
+  font-size: 5.5rem;
+  color: white;
+}
+
+.texta {
+  font-size: 2rem;
+  color: white;
+}
+
+.tercerdato {
+  display: flex;
+  flex-direction: column;
+}
+
+.numero {
+  font-size: 5.5rem;
+  color: white;
+}
+
+.textn {
+  font-size: 2rem;
+  color: white;
+}
+
+@media (max-width: 767px) {
+  .problem {
+    padding-top: 0px;
+  }
+
+  .titleP p {
+    font-size: 3rem;
+    text-align: center;
+  }
+
+  .datos {
     flex-direction: column;
-}
+    gap: 50px;
+  }
 
-.porcentaje{
-    font-size: 7rem;
-    color: white;
-}
+  .primerdato {
+    align-items: center;
+  }
 
-.textp{
-    font-size: 3.5rem;
-    color: white;
-}
+  .porcentaje {
+    font-size: 4rem;
+  }
 
-.segundodato{
-    display: flex;
-    flex-direction: column;
-}
+  .textp {
+    font-size: 1.5rem;
+  }
 
-.año{
-    font-size: 7rem;
-    color: white;
-}
+  .segundodato {
+    align-items: center;
+  }
 
-.texta{
-    font-size: 3.5rem;
-    color: white;
-}
+  .año {
+    font-size: 4rem;
+  }
 
-.tercerdato{
-    display: flex;
-    flex-direction: column;
-}
+  .texta {
+    font-size: 1.5rem;
+  }
 
-.numero{
-    font-size: 7rem;
-    color: white;
-}
+  .tercerdato {
+    align-items: center;
+  }
 
-.textn{
-    font-size: 2.5rem;
-    color: white;
-}
-.problem{
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-top: 30px;
-}
+  .numero {
+    font-size: 4rem;
+  }
 
-.titleP{
-    font-size: 6rem;
-    color: white;
-    text-align: left;
-}
-
-.datos{
-    display: flex;
-    flex-direction: row;
-    gap: 200px;
-    justify-content: center;
-    padding-top: 75px;
-}
-
-.primerdato{
-    display: flex;
-    flex-direction: column;
-}
-
-.porcentaje{
-    font-size: 5.5rem;
-    color: white;
-}
-
-.textp{
-    font-size: 2rem;
-    color: white;
-}
-
-.segundodato{
-    display: flex;
-    flex-direction: column;
-}
-
-.año{
-    font-size: 5.5rem;
-    color: white;
-}
-
-.texta{
-    font-size: 2rem;
-    color: white;
-}
-
-.tercerdato{
-    display: flex;
-    flex-direction: column;
-}
-
-.numero{
-    font-size: 5.5rem;
-    color: white;
-}
-
-.textn{
-    font-size: 2rem;
-    color: white;
+  .textn {
+    font-size: 1.5rem;
+  }
 }
