--- a/src/Containers/Aboutus.css
+++ b/src/Containers/Aboutus.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   padding-left: 2rem;
   padding-right: 2rem;
   padding-top: 75px;
@@ -22,38 +23,50 @@
   align-items: right;
 }
 
-.clara {
-  width: 40rem;
-  height: 35rem;
-  rotate: -15deg;
+.imageContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 20em;
+  width: 20em;
+}
 
+.clara {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  rotate: -15deg;
+}
+
+@media (max-width: 767px) {
   .aboutus {
+    padding-top: 0px;
+    flex-direction: column;
+  }
+
+  .imageContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-top: 75px;
+    justify-content: center;
+    height: 10em;
+    width: 10em;
+  }
+
+  .clara {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+    rotate: -15deg;
   }
 
   .title {
-    font-size: 4rem;
-    text-align: left;
+    font-size: 2rem;
+    text-align: center;
   }
 
   .text {
     font-size: 1.5rem;
-    text-align: left;
-  }
-
-  .right-Container {
-    justify-content: right;
-    align-items: right;
-  }
-
-  .clara {
-    width: 40rem;
-    height: 35rem;
-    rotate: -15deg;
   }
 }
