--- a/src/Pages/landing/home.css
+++ b/src/Pages/landing/home.css
@@ -1,24 +1,23 @@
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 100vh;
+  background: linear-gradient(180deg, #5b57f4 0%, #8c73e7 67.68%);
 }
 
 #aboutus {
-    background-color: white;
-    min-height: 100vh;
-
+  background-color: #f5f5f5;
+  min-height: 100vh;
 }
 
 #problem {
-    background-color: #936CFB;
-    min-height: 100vh;
+  background-color: #936cfb;
+  min-height: 100vh;
 }
 
 #benefits {
-    background-color: white;
-
-    min-height: 100vh;
+  background-color: #f5f5f5;
+  min-height: 100vh;
 }
