--- a/src/Containers/Aboutus.css
+++ b/src/Containers/Aboutus.css
@@ -3,19 +3,25 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  padding-left: 2rem;
-  padding-right: 2rem;
   padding-top: 75px;
 }
 
 .title {
   font-size: 4rem;
-  text-align: left;
+  margin: 3rem 0 3rem 0;
 }
 
-.text {
-  font-size: 1.5rem;
+.paragraph2{
+  margin-top: 3rem;
+}
+
+.textinfo{
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  width:50%;
   text-align: left;
+  font-size: 1.7rem;
 }
 
 .right-Container {
@@ -28,11 +34,11 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 20em;
-  width: 20em;
+  height: 50rem;
+  width: 50rem;
 }
 
-.clara {
+.imageContainer img{
   height: 100%;
   width: 100%;
   object-fit: contain;
@@ -54,7 +60,7 @@
     width: 10em;
   }
 
-  .clara {
+  .imageContainer img {
     height: 100%;
     width: 100%;
     object-fit: contain;
@@ -66,7 +72,7 @@
     text-align: center;
   }
 
-  .text {
+  .paragrah1, .paragraph2 {
     font-size: 1.5rem;
   }
 }
