--- a/src/Containers/Problem.css
+++ b/src/Containers/Problem.css
@@ -6,12 +6,6 @@
   justify-content: center;
 }
 
-.titleP {
-  font-size: 6rem;
-  color: white;
-  text-align: left;
-}
-
 .datos {
   display: flex;
   flex-direction: row;
@@ -67,13 +61,15 @@
 .problem {
   padding-left: 2rem;
   padding-right: 2rem;
-  padding-top: 30px;
+
 }
 
 .titleP {
-  font-size: 6rem;
+  font-size: 3rem;
+  font-style: italic;
   color: white;
-  text-align: left;
+  text-align: center;
+
 }
 
 .datos {
@@ -81,7 +77,7 @@
   flex-direction: row;
   gap: 200px;
   justify-content: center;
-  padding-top: 75px;
+  padding-top: 85px;
 }
 
 .primerdato {
@@ -90,7 +86,7 @@
 }
 
 .porcentaje {
-  font-size: 5.5rem;
+  font-size: 6.5rem;
   color: white;
 }
 
@@ -105,7 +101,7 @@
 }
 
 .año {
-  font-size: 5.5rem;
+  ffont-size: 6.5rem;
   color: white;
 }
 
@@ -120,7 +116,7 @@
 }
 
 .numero {
-  font-size: 5.5rem;
+  font-size: 6.5rem;
   color: white;
 }
 
