--- a/src/Pages/cuenta/login.css
+++ b/src/Pages/cuenta/login.css
@@ -5,6 +5,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
+  margin-top: 5rem;
 
 }
 
@@ -62,7 +63,7 @@ form label {
   text-align: right;
 }
 
-.btn-submitt-login {
+.btn-submitt-login button {
   width:15%;
   height:45px;
   margin-top: 3rem;
@@ -133,7 +134,7 @@ form ::placeholder {
     text-align: right;
   }
 
-  .btn-submitt-login {
+  .btn-submitt-login{
     background-color: var(--amarillo);
     height: 3rem;
     width: 10rem;
