--- a/src/Pages/landing/home.css
+++ b/src/Pages/landing/home.css
@@ -1,23 +1,19 @@
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 100vh;
+#home {
+  min-height: 95vh;
   background: linear-gradient(180deg, #5b57f4 0%, #8c73e7 67.68%);
 }
 
 #aboutus {
   background-color: #f5f5f5;
-  min-height: 100vh;
+  min-height: 95vh;
 }
 
 #problem {
   background-color: #936cfb;
-  min-height: 100vh;
+  min-height: 95vh;
 }
 
 #benefits {
   background-color: #f5f5f5;
-  min-height: 100vh;
+  min-height: 95vh;
 }
