--- a/src/Containers/Dashboard.css
+++ b/src/Containers/Dashboard.css
@@ -7,7 +7,7 @@
   width: 90vw;
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 60%;
   transform: translate(-50%, -50%);
 }
 
@@ -16,6 +16,7 @@
   flex-direction: row;
   width: 100%;
   height: 30%;
+  gap:1.2rem;
 }
 
 .bottomContainer {
@@ -24,12 +25,13 @@
   width: 100%;
   height: 70%;
   margin-top: 5em;
+  gap:1.2rem;
 }
 
 .leftContainer {
   display: flex;
   flex-direction: column;
-  width: 30em;
+  width: 32em;
   height: 15em;
   background: linear-gradient(
     140deg,
@@ -70,7 +72,7 @@
 .centerContainer {
   display: flex;
   flex-direction: column;
-  width: 15em;
+  width: 20em;
   height: 15em;
   background: linear-gradient(
     140deg,
@@ -87,7 +89,7 @@
 .rightContainer {
   display: flex;
   flex-direction: column;
-  width: 15em;
+  width: 20em;
   height: 15em;
   background: linear-gradient(
     140deg,
@@ -105,7 +107,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 40%;
+  width: 32%;
   height: 100%;
   background: linear-gradient(
     140deg,
@@ -123,7 +125,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 60%;
+  width: 42%;
   height: 100%;
   background: linear-gradient(
     140deg,
@@ -140,11 +142,11 @@
 .botLeftContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
   width: 100%;
   height: 50%;
-  margin-top: 5em;
+  margin-top: 8em;
   margin-bottom: 50%;
   position: relative;
 }
@@ -159,7 +161,8 @@
 }
 
 .adContainer p {
-  font-size: 1.5em;
+  font-size: 2em;
+  text-align: left;
   font-weight: 600;
 }
 
@@ -167,14 +170,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 10em;
+  width: 8em;
   height: 3em;
-  background: #5b57f4;
-  color: white;
-  border-radius: 1em;
-  font-size: 1.5em;
+  background: var(--salmon);
+  color: black;
+  border-radius: 0.5em;
+  border: 3px solid black;
+  font-size: 1em;
   font-weight: 600;
   cursor: pointer;
+  margin-top: 1.2rem;
 }
 
 .botRightContainer {
