--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 :root {
   --morado-rey: #5B57F4;
   --amarillo: #FFE17E;
+  --rosa: #BD3993;
+  --salmon: #E07F9C;
   --tranistion: all 500ms ease;
+
 
 }
 
